# sp-saas-monitor

./: Cargo.toml  FIXES.md  IMPROVEMENTS.md  Readme.md  check-prereqs.ps1  config.yaml  install.ps1  stop  uninstall.ps1
src/: config.rs  dns_resolver.rs  logging.rs  main.rs  packet_sniffer.rs  process_monitor.rs  saas_detector.rs  wfp_monitor.rs
